istio/peer-authentication.yaml
apiVersion: security.istio.io/v1

kind: PeerAuthentication

metadata:

  name: default

spec:

  mtls:

    mode: STRICT
