istio/destination-rule.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule

metadata:
  name: python-api

spec:
  host: python-api

  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL

    connectionPool:
      tcp:
        maxConnections: 100
      http:
        http1MaxPendingRequests: 20
        maxRequestsPerConnection: 10

    outlierDetection:
      consecutive5xxErrors: 5
      interval: 30s
      baseEjectionTime: 30s

  subsets:
    - name: v1
      labels:
        version: v1

    - name: v2
      labels:
        version: v2
