istio/virtual-service.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService

metadata:
  name: python-api

spec:
  hosts:
    - "*"

  gateways:
    - python-api

  http:
    - retries:
        attempts: 3
        perTryTimeout: 2s

      timeout: 5s

      route:
        - destination:
            host: python-api
            port:
              number: 80
